Upgraded view to update depending on the question type. There is a bug that causes the app to crash when switching to landscape, and the checkAnswer functions still need to be fixed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="answer_landmass_d">India</string>
     <string name="question_population">What country has the largest population?</string>
     <string name="answer_population">China</string>
+    <string name="submit_button">Submit</string>
 </resources>
